--- a/doc/cxm.conf
+++ b/doc/cxm.conf
@@ -10,64 +10,34 @@
 #
 
 RewriteEngine On
-#RewriteRule ^/ctm-explorer$ /ctm-explorer/ [L,R=301]
-#RewriteRule ^/cvm-explorer$ /cvm-explorer/ [L,R=301]
-RewriteRule ^/csm-explorer$ /csm-explorer/ [L,R=301]
+RewriteRule ^/research/ctm-explorer$ /research/ctm-explorer/ [L,R=301]
+RewriteRule ^/research/cfm-explorer$ /research/cfm-explorer/ [L,R=301]
+RewriteRule ^/research/cvm-explorer$ /research/cvm-explorer/ [L,R=301]
+RewriteRule ^/csm-viewer$ /csm-viewer/ [L,R=301]
 RewriteRule ^/gsrd-explorer$ /gsrd-explorer/ [L,R=301]
 RewriteRule ^/pbr-explorer$ /pbr-explorer/ [L,R=301]
-RewriteRule ^/cgm-explorer$ /cgm-explorer/ [L,R=301]
+RewriteRule ^/cgm-viewer$ /cgm-viewer/ [L,R=301]
 
-RewriteRule ^/research/cfm-explorer/7.0/preferred$ /research/cfm-explorer/7.0/preferred/ [L,R=301]
-RewriteRule ^/research/cfm-explorer/7.0/alternatives$ /research/cfm-explorer/7.0/alternatives/ [L,R=301]
-RewriteRule ^/research/cfm-explorer/7.0/ruptures$ /research/cfm-explorer/7.0/ruptures/ [L,R=301]
-RewriteRule ^/research/cfm-explorer/6.1/preferred$ /research/cfm-explorer/6.1/preferred/ [L,R=301]
-RewriteRule ^/research/cfm-explorer/6.1/alternatives$ /research/cfm-explorer/6.1/alternatives/ [L,R=301]
-RewriteRule ^/research/cfm-explorer/6.1/ruptures$ /research/cfm-explorer/6.1/ruptures/ [L,R=301]
-RewriteRule ^/research/cfm-explorer/5.3/preferred$ /research/cfm-explorer/5.3/preferred/ [L,R=301]
-
-RewriteRule ^/research/cvm-explorer$ /research/cvm-explorer/ [L,R=301]
-ProxyPassReverse /research/cvm-explorer http://127.0.0.1:8100/
-ProxyPass /research/cvm-explorer http://127.0.0.1:8100/
 ProxyPassReverse /cvm-explorer http://127.0.0.1:8100/
 ProxyPass /cvm-explorer http://127.0.0.1:8100/
+ProxyPassReverse /research/cvm-explorer http://127.0.0.1:8100/
+ProxyPass /research/cvm-explorer http://127.0.0.1:8100/
 
-RewriteRule ^/research/ctm-explorer$ /research/ctm-explorer/ [L,R=301]
-ProxyPassReverse /research/ctm-explorer http://127.0.0.1:8192/
-ProxyPass /research/ctm-explorer http://127.0.0.1:8192/
 ProxyPassReverse /ctm-explorer http://127.0.0.1:8192/
 ProxyPass /ctm-explorer http://127.0.0.1:8192/
+ProxyPassReverse /research/ctm-explorer http://127.0.0.1:8192/
+ProxyPass /research/ctm-explorer http://127.0.0.1:8192/
 
-ProxyPassReverse /csm-explorer http://127.0.0.1:8096/
-ProxyPass /csm-explorer http://127.0.0.1:8096/
+ProxyPassReverse /csm-viewer http://127.0.0.1:8096/
+ProxyPass /csm-viewer http://127.0.0.1:8096/
 
-ProxyPassReverse /research/cfm-explorer/7.0/preferred http://127.0.0.1:8104/
-ProxyPass /research/cfm-explorer/7.0/preferred http://127.0.0.1:8104/
-ProxyPassReverse /research/cfm-explorer/7.0/alternatives http://127.0.0.1:8106/
-ProxyPass /research/cfm-explorer/7.0/alternatives http://127.0.0.1:8106/
-ProxyPassReverse /research/cfm-explorer/7.0/ruptures http://127.0.0.1:8108/
-ProxyPass /research/cfm-explorer/7.0/ruptures http://127.0.0.1:8108/
-
-ProxyPassReverse /research/cfm-explorer/6.1/preferred http://127.0.0.1:8084/
-ProxyPass /research/cfm-explorer/6.1/preferred http://127.0.0.1:8084/
-ProxyPassReverse /research/cfm-explorer/6.1/alternatives http://127.0.0.1:8086/
-ProxyPass /research/cfm-explorer/6.1/alternatives http://127.0.0.1:8086/
-ProxyPassReverse /research/cfm-explorer/6.1/ruptures http://127.0.0.1:8088/
-ProxyPass /research/cfm-explorer/6.1/ruptures http://127.0.0.1:8088/
-
-ProxyPassReverse /research/cfm-explorer/5.3/prferred http://127.0.0.1:8090/
-ProxyPass /research/cfm-explorer/5.3/preferred http://127.0.0.1:8090/
-
-ProxyPassReverse /research/cgm-explorer http://127.0.0.1:8082/
-ProxyPass /research/cgm-explorer http://127.0.0.1:8082/
-ProxyPassReverse /cgm-explorer http://127.0.0.1:8082/
-ProxyPass /cgm-explorer http://127.0.0.1:8082/
+ProxyPassReverse /research/cfm-explorer http://127.0.0.1:8104/
+ProxyPass /research/cfm-explorer http://127.0.0.1:8104/
 
 ProxyPassReverse /gsrd-explorer http://127.0.0.1:8092/
 ProxyPass /gsrd-explorer http://127.0.0.1:8092/
 ProxyPassReverse /pbr-explorer http://127.0.0.1:8094/
 ProxyPass /pbr-explorer http://127.0.0.1:8094/
-
-RewriteRule ^/cgm-viewer/?$  /cgm-explorer/ [L,R=301]
 
 ProxyPreserveHost On
 TimeOut 600
